--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mindlyn/react",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "private": false,
   "description": "React components for Mindlyn SDK",
   "license": "MIT",
@@ -39,7 +39,8 @@
   },
   "files": [
     "dist",
-    "LICENSE"
+    "LICENSE",
+    "README.md"
   ],
   "sideEffects": false,
   "packageManager": "pnpm@10.10.0",
@@ -65,15 +66,15 @@
     "nanoid": "^5.1.5",
     "remark-breaks": "^4.0.0",
     "remark-gfm": "^4.0.1",
-    "tailwind-merge": "^3.2.0"
+    "tailwind-merge": "^3.3.0"
   },
   "devDependencies": {
     "@radix-ui/react-dialog": "^1.1.13",
     "@radix-ui/react-dropdown-menu": "^2.1.14",
     "@tailwindcss/postcss": "^4.1.6",
-    "@types/node": "^22.15.3",
-    "@types/react": "^19.1.2",
-    "@types/react-dom": "^19.1.3",
+    "@types/node": "^22.15.18",
+    "@types/react": "^19.1.4",
+    "@types/react-dom": "^19.1.5",
     "postcss": "^8.5.3",
     "postcss-cli": "^11.0.1",
     "react": "^19.1.0",
